tests/ui/mem_forget.stderr
error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:16:5
   |
16 |     memstuff::forget(six);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/mem_forget.rs:10:8
   |
10 | #[deny(mem_forget)]
   |        ^^^^^^^^^^

error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:20:5
   |
20 |     std::mem::forget(seven);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: usage of mem::forget on Drop type
  --> $DIR/mem_forget.rs:24:5
   |
24 |     forgetSomething(eight);
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

